log
Thu Apr 16 07:59:21 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
c1551cf
Thu Apr 16 08:20:47 PM UTC 2026: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:21: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   48 |     HashMap mapa = (Hashmap*) malloc(sizeof(HashMap));
      |                     ^~~~~~~
      |                     HashMap
hashmap.c:48:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:29: error: expected expression before ‘)’ token
   48 |     HashMap mapa = (Hashmap*) malloc(sizeof(HashMap));
      |                             ^
hashmap.c:49:12: error: invalid operands to binary == (have ‘HashMap’ {aka ‘struct HashMap’} and ‘void *’)
   49 |     if(mapa==NULL){
      |            ^~
hashmap.c:52:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   52 |     mapa->buckets = (Pair*)malloc(sizeof(Pair));
      |         ^~
hashmap.c:53:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   53 |     mapa->capacity = capacity;
      |         ^~
hashmap.c:54:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   54 |     mapa->current = -1;
      |         ^~
hashmap.c:57:13: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   57 |         mapa->buckets[i] = NULL;
      |             ^~
hashmap.c:59:12: error: incompatible types when returning type ‘HashMap’ {aka ‘struct HashMap’} but ‘HashMap *’ {aka ‘struct HashMap *’} was expected
   59 |     return mapa;
      |            ^~~~
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
7c13f3e
Thu Apr 16 08:25:57 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:20: error: invalid initializer
   48 |     HashMap mapa = (HashMap*) malloc(sizeof(HashMap));
      |                    ^
hashmap.c:49:12: error: invalid operands to binary == (have ‘HashMap’ {aka ‘struct HashMap’} and ‘void *’)
   49 |     if(mapa==NULL){
      |            ^~
hashmap.c:52:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   52 |     mapa->buckets = (Pair*)malloc(sizeof(Pair));
      |         ^~
hashmap.c:53:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   53 |     mapa->capacity = capacity;
      |         ^~
hashmap.c:54:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   54 |     mapa->current = -1;
      |         ^~
hashmap.c:57:13: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   57 |         mapa->buckets[i] = NULL;
      |             ^~
hashmap.c:59:12: error: incompatible types when returning type ‘HashMap’ {aka ‘struct HashMap’} but ‘HashMap *’ {aka ‘struct HashMap *’} was expected
   59 |     return mapa;
      |            ^~~~
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
bdac959
Thu Apr 16 08:26:39 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:52:19: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   52 |     mapa->buckets = (Pair*)malloc(sizeof(Pair));
      |                   ^
398a437
Thu Apr 16 08:27:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
db58a70
Thu Apr 16 08:28:09 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:52:21: error: expected expression before ‘=’ token
   52 |     mapa->buckets * = (Pair*)malloc(sizeof(Pair));
      |                     ^
d85ee5c
Thu Apr 16 08:29:00 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
2b2fc29
Thu Apr 16 08:34:40 PM UTC 2026: 
 tests:  1|6
total_score: 5/60
0e3d404
Thu Apr 16 08:44:07 PM UTC 2026: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:72:16: error: implicit declaration of function ‘Hash’; did you mean ‘hash’? [-Wimplicit-function-declaration]
   72 |     long pos = Hash(key);
      |                ^~~~
      |                hash
hashmap.c:74:15: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   74 |         if(map->key != key){
      |               ^~
hashmap.c:76:9: error: expected expression before ‘}’ token
   76 |         }
      |         ^
hashmap.c:72:10: error: variable ‘pos’ set but not used [-Werror=unused-but-set-variable]
   72 |     long pos = Hash(key);
      |          ^~~
cc1: all warnings being treated as errors
e527f99
Sat Apr 18 02:29:55 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:72:16: error: implicit declaration of function ‘Hash’; did you mean ‘hash’? [-Wimplicit-function-declaration]
   72 |     long pos = Hash(key);
      |                ^~~~
      |                hash
hashmap.c:74:15: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   74 |         if(map->key != key){
      |               ^~
hashmap.c:76:9: error: expected expression before ‘}’ token
   76 |         }
      |         ^
hashmap.c:72:10: error: variable ‘pos’ set but not used [-Werror=unused-but-set-variable]
   72 |     long pos = Hash(key);
      |          ^~~
cc1: all warnings being treated as errors
b7d1853
Sat Apr 18 03:38:21 AM UTC 2026: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:73:16: error: implicit declaration of function ‘Hash’; did you mean ‘hash’? [-Wimplicit-function-declaration]
   73 |     long pos = Hash(key);
      |                ^~~~
      |                hash
hashmap.c:72:10: error: unused variable ‘largo’ [-Werror=unused-variable]
   72 |     long largo = map->capacity;
      |          ^~~~~
cc1: all warnings being treated as errors
d3ca16b
Sat Apr 18 03:39:11 AM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:72:16: error: too few arguments to function ‘hash’
   72 |     long pos = hash(key);
      |                ^~~~
hashmap.c:28:6: note: declared here
   28 | long hash( char * key, long capacity) {
      |      ^~~~
b47f98e
Sat Apr 18 06:43:25 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
ae0066b
Sat Apr 18 07:13:52 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
5ca849d
Sat Apr 18 07:17:39 AM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 20/60
02e1a6e
Sat Apr 18 08:32:50 PM UTC 2026: 
 tests:  5|4
total_score: 20/60
428121f
Sat Apr 18 09:38:45 PM UTC 2026: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:55: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   90 |     while(map->buckets[indice] != NULL && map->buckets->key != key){
      |                                                       ^~
      |                                           (*          )
hashmap.c:94:32: error: expected ‘;’ before ‘}’ token
   94 |     return map->buckets[indice]
      |                                ^
      |                                ;
   95 | }
      | ~                               
a391162
Sat Apr 18 09:39:05 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:55: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   90 |     while(map->buckets[indice] != NULL && map->buckets->key != key){
      |                                                       ^~
      |                                           (*          )
f20dab5
